   other participants in the call.

app_sendtext
------------------
    Support Enhanced Messaging.  SendText now accepts new channel variables
    that can be used to override the To and From display names and set the
    Content-Type of a message.  Since you can now set Content-Type, other
    text/* content types are now valid.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.20.0 to Asterisk 13.21.0 ----------
------------------------------------------------------------------------------

Build System
------------------
 * RADIUS backends for CEL and CDR can now also be built using the radcli
   client library, in addition to the existing support for building them
   using either freeradius or radiusclient-ng.

Core
------------------
 * A new configuration option "genericplc_on_equal_codecs" was added to the
   "plc" section of codecs.conf to allow generic packet loss concealment even
   if no transcoding was originally needed.  Transcoding via SLIN is forced
   in this case.

res_pjproject
------------------
 * Added the "cache_pools" option to pjproject.conf.  Disabling the option
   helps track down pool content mismanagement when using valgrind or
   MALLOC_DEBUG.  The cache gets in the way of determining if the pool contents
   are used after free and who freed it.

res_pjsip_notify
------------------
 * Extend the PJSIPNotify AMI command to send an in-dialog notify on a
   channel.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.19.0 to Asterisk 13.20.0 ----------
------------------------------------------------------------------------------

Core
------------------
 * During dialplan reload log messages are produced for each context,
   extension and include.  These messages are no longer printed by the
   verbose loggers, they are now only logged as debug messages.

app_confbridge
------------------